--- a/index.html
+++ b/index.html
@@ -66,12 +66,21 @@
                         <img src="italy-1460295_1920_mini-1200x766.jpg" width="800" height="500" alt="Texto alternativo" title="Outra figura" />
                     </div>
 
+                    <div id="cit">
+                        <h1>As cidades mais bonitas da Itália</h1>
+                        <iframe width="600" height="400" src="https://www.youtube.com/embed/RQGpctS57_s?si=mXlTaFxNdVrMU0fb" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+
                     <div id="rodape"> 
                         <h1>Se gostou do Conteúdo entre em contato com o número</h1>  
                         <h1>(15) 99329-1814</h1>
                         <h1>E o nosso site: Saibamaisitalia.com.br</h1>
-
                     </div>
+
+                    
 
                 </body>
 
